# git-steven.github.io

./: .gitignore  CLAUDE.md  README.md  _config.yml  hitl-foo.drawio  pyproject.toml  ruff.toml
.claude/: settings.json
_guide/: drawio-palette.xml
_guide/diagram/: icon-lexicon-5.md  icon-lexicon-v6.md
_guide/drawio-palette-guide/: index.html
_includes/head/: custom.html
_pages/: about.md  projects.md
_posts/: 2024-03-13-postgres-parameterized-json-inserts.markdown  2024-03-15-postgres-query-return-records.markdown  2024-03-29-fast-api-with-jwt.md  2024-03-29-fastapi-with-jwt.md  2024-04-03-sklearn-feature-engineering.md  2024-04-03-sklearn-feature-selection.md  2024-04-20-pyspark-mlib-graphx.md  2024-04-23-pyspark-mlib-graphx-got.md  2024-04-23-pyspark-mlib-graphx.md  2024-04-24-sklearn-exploring-bc-dataset.md  2024-04-25-claude-llm-symptoms.md  2024-04-25-sklearn-exploring-bc-dataset.md  2024-04-26-claude-llm-symptoms.md  2024-0405-cdk-deploy-docker-lambda-sqs.md  2024-0405-cdk_deploy_fast_api_docker.md  2024-05-01-prefect-pipeline.md  2024-08-06-techniques-large-data-vis.md  2024-08-07-data-sketching.md  2025-08-01-clean-architecture.md  2025-08-14-layered-architecture.md  20250801-clean-architecture.md.not  20251022-layered-ports-architecture.md  2026-01-22-scrum-counterpoint.md  2026-01-23-microservice-coupling.md  2026-01-23-scrum-counterpoint.md  2026-01-24-microservice-coupling.md  2026-03-07-microservice-coupling.md  2026-03-07-scrum-counterpoint.md  2026-03-09-architecture-coupling.md  2026-03-15-architecture-coupling.md  2026-03-19-geometry-coupling-part-1.md  2026-03-19-geometry-coupling.md  2026-03-29-autonomous-ai-pt1-hitl.md  2026-0329autonomous-ai-pt2-hotl.md  2026-05-29-autonomous-ai-pt1-hitl.md  2026-06-07-layered-architecture-pt2.md  2026-07-02-autonomous-ai-pt2-hotl.md  2026-07-14-autonomous-ai-pt2-hotl.md  2026-07-16-datalake-swamp.md  20260315architecture-coupling.md  (+7 more)
_site/: CLAUDE.md  feed.xml  pyproject.toml  sitemap.xml
_site/CLAUDE/: index.html
_site/about/: index.html
_site/ai/ml/llm/python/claude/claude-llm-symptoms/: index.html
_site/architecture/layered architecture/software engineering/layered-architecture/: index.html
_site/assets/diagram/: color-experiementing.drawio  icon-lexicon.md  metrics-instability.drawio  uncertainty-cone.drawio
_site/assets/diagram/icon-lexicon/: index.html
_site/data-engineering/data-visualization/scikit-learn/techniques-large-data-vis/: index.html
_site/dataengineering/datavisualization/datasketching/datasketch/data-sketching/: index.html
_site/fastapi/python/jwt/authentication/security/fastapi-with-jwt/: index.html
_site/postgresql/sql/database/data engineering/postgres-parameterized-json-inserts/: index.html
_site/postgresql/sql/database/data engineering/postgres-query-return-records/: index.html
_site/prefect/data_engineering/python/scikit-learn/prefect-pipeline/: index.html
_site/projects/: index.html
_site/python-git-steven/: fast-api-sqs-labmda.ipynb  pyspark01.ipynb  sklearn-feature-engineering-2.ipynb  spark-defaults.conf  spark.py  spark_harry_potter.py
_site/python-git-steven/data/: HarryPotter1.csv  HarryPotter2.csv  hp_characters.csv  hp_script.csv
_site/python-git-steven/ioc_proposal_one_class_per_file/: index.html
_site/scikit-learn/feature-engineering/data-visualization/networkx/python/sklearn/ai/ml/sklearn-exploring-bc-dataset/: index.html
_site/scikit-learn/feature-engineering/python/sklearn/ai/ml/sklearn-feature-selection/: index.html
_site/sdlc/agile/scrum/architecture/software engineering/scrum-counterpoint/: index.html
_site/sdlc/architecture/coupling/metrics/microservices/microservice-coupling/: index.html
notebook/: fast-api-sqs-labmda.ipynb  pyspark01.ipynb  sklearn-feature-engineering.ipynb
python-git-steven/: CLAUDE.md  Dockerfile  build.sh  coupling-article-part1.md  coupling-metrics-comedy.ipynb  coupling-metrics-complete.drawio  coupling-metrics-plotly.ipynb  coupling-metrics-visualizations.ipynb  coupling-part1.md  coupling_notebook_part_1.ipynb  coupling_notebook_part_1b.ipynb  coupling_notebook_part_1c.ipynb  coupling_notebook_part_1c_matplotlib.ipynb  coupling_notebook_part_1c_matplotlib_v2.ipynb  coupling_notebook_part_1c_matplotlib_v3.ipynb  coupling_notebook_part_1c_matplotlib_v4.ipynb  coupling_notebook_part_1c_matplotlib_v5.ipynb  coupling_notebook_part_1c_matplotlib_v6.ipynb  coupling_notebook_part_1c_matplotlib_v7_fixed.ipynb  coupling_notebook_part_1c_orig.ipynb  coupling_part1_notebook.ipynb  dikw-old.md  dikw.ipynb  dikw.md  docker-compose.yml  docker-sh.sh  got_scripts_breakdown.csv  ioc_proposal_notebook.ipynb  ioc_proposal_one_class_per_file.md  main-sequence-interactive.html  medium_search_dataset.csv  palette_color.py  pyproject.toml  pyspark02.ipynb  ruff.toml  scrum-counterpoint-Copy1.ipynb  scrum-counterpoint.ipynb  scrum_points_and_counterpoint_notebook.bak.ipynb  scrum_points_and_counterpoint_notebook.ipynb  scrum_points_and_counterpoints_notebook2.bak.ipynb  (+3 more)
python-git-steven/253_31033_139-pycharm-support-libs/pydev/pydevd_attach_to_process/: attach.dylib
python-git-steven/conf/: spark-defaults.conf
python-git-steven/coupling-old/: coupling-metrics-plotly.ipynb  coupling-metrics-visualizations.ipynb  coupling_part1_notebook (1).ipynb  coupling_part1_notebook.ipynb
python-git-steven/data/: HarryPotter3.csv  HarryPotterAll.csv
python-git-steven/notebook/: pyspark01.ipynb  sklearn-feature-engineering.ipynb
python-git-steven/spark/: Dockerfile  build.sh  docker-compose.yml  docker-sh.sh
python-git-steven/terracoil/cli/: __init__.py  color_mix.py
python-git-steven/terracoil/geometry/: __init__.py  curve.py  ellipse.py  enums.py  segment.py  size2d.py  types.py  vector2d.py
python-git-steven/terracoil/util/: __init__.py  angle_util.py  collection_util.py  math_constants.py  math_util.py  types.py
python-git-steven/tests/: test_angle_util.py  test_curve.py  test_ellipse.py  test_enums.py  test_math_constants.py  test_math_util.py  test_segment.py  test_size2d.py  test_vector2d.py
(+24 files in other folders)
