[project]
name = "git-steven-homepage"
version = "0.1.0"
description = "Python setup for git-steven.github.io"
authors = [{ name = "steven.miers@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13.7,<4.0.0"

[tool.poetry.dependencies]
python = "^3.13.7"
freyja = "^1.1"
matplotlib = "^3.8.4"
nltk = "^3.8.1"
numpy = "^2.3.4"
networkx = "^3.3"
pandas = "^3.0.1"
plotly = "^6.6.0"
scikit-learn = "^1.4.2"
setuptools = "^69.5.1"
#grpcio = "^1.62.2"
#google-api-python-client = "^2.126.0"
#grpcio-status = "^1.62.2"
#sparknlp = "^1.0.0"
#spark-nlp-display = "^5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
