[project]
name = "python-git-steven"
version = "0.1.0"
description = "Python environment for data visualization and Jupyter notebooks"
authors = [{name = "Steven Miers", email = "steven.miers@gmail.com"}]
requires-python = ">=3.14.4,<4.0.0"
license = {text = "MIT"}

[tool.poetry]
packages = [{include = "terracoil"}]

[tool.poetry.scripts]
color-mix = "terracoil.cli:ColorMix._main"

[tool.poetry.dependencies]
python = "^3.14.4"
ipykernel = "^7.2.0"
jupyterlab = "^4.5.6"
kaleido = "^1.2.0"
networkx = "^3.6.1"
matplotlib = "^3.10.8"
numpy = "^2.4.3"
pandas = "^3.0.1"
plotly = "^6.6.0"
coloraide = "^8.8.1"
freyja = "^2.0.2"

[dependency-groups]
test = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-timeout (>=2.3.1,<3.0.0)",
    "pytest-asyncio (>=0.23,<1.0)",
    "ruff (>=0.14.2,<0.15.0)",
]
dev = [
    { include-group = "test" },
    "mypy[reports] (>=1.18.2,<2.0.0)",
    "Pillow (>=11.0.0,<12.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "poetry-dynamic-versioning (>=1.9.1,<2.0.0)"
]

[tool.pytest.ini_options]
cache_dir = "tmp/.pytest_cache"
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=terracoil --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
